# inventory_management

./: .env.example  README.md
app/config/: database.py  security.py
app/models/: supplier_model.py
app/routes/: item_routes.py  purchase_routes.py
app/schemas/: item_schema.py  purchase_schema.py  supplier_schema.py
app/services/: item_service.py  purchase_service.py
app/utils/: helper.py  response_handler.py
inventory_purchase_system/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
inventory_purchase_system/app/: main.py
inventory_purchase_system/app/config/: settings.py
inventory_purchase_system/app/middleware/: rate_limit.py
inventory_purchase_system/app/models/: item_model.py  purchase_model.py  user_model.py
inventory_purchase_system/app/routes/: auth_routes.py  supplier_routes.py
inventory_purchase_system/app/schemas/: auth_schema.py
inventory_purchase_system/app/services/: auth_service.py  supplier_service.py
inventory_purchase_system/tests/: test_suppliers.py
