[project]
name = "inventory-purchase-system"
version = "1.0.0"
description = "Backend API for managing inventory, suppliers, and purchases"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "motor==3.6.0",
    "beanie==1.26.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-dotenv==1.0.1",
    "pydantic[email]==2.8.2",
    "pydantic-settings==2.4.0",
    "slowapi==0.1.9",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
